Big Fixes
Help, init, and tests