@@ -2,6 +2,7 @@ package sst;
 
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -102,14 +103,14 @@ public class Help {
         while (true) {
             if (params.size() < 1) {
                 cmdStr = game.con.readLine("Help on what command?");
-                params = readCommands(cmdStr).orElse(List.of(""));
+                params = readCommands(cmdStr).orElse(Arrays.asList(""));
             }
             cmdStr = params.get(0);
 
             c = handler.matchCommand(cmdStr);
             if (c == Command.undefined) {
                 printValidCommands();
-                params.clear();
+                params = Arrays.asList();
             } else {
                 return c;
             }
